server: say what the numbers mean, give startup its own tab, mark one server as ours
Three things, all from looking at it on screen.

The overview was written in abbreviations that only help someone who already knows
what they mean — "live set", "fork mem", "load". Every row now says what it is
measuring: retained after the last collection, memory this server may spend on
forked JVMs, how much of the machine this server is using versus everything else.
The three numbers that answer "is this server in trouble" get a full-width bar,
because a 20-column gauge cannot show the difference between 70% and 80%.

The launch details moved out of Config into their own Startup tab, and it scrolls
in both directions: a classpath is a couple of hundred entries of paths well past
120 characters, so it overflows on both axes. Arrows scroll it rather than changing
tab, the wheel scrolls vertically, and a sideways wheel scrolls horizontally —
handled off the crossterm event because the react layer has no kind for it.

Two servers were both marked "← this build". Every bleep version ever run in a
directory leaves a server that has it loaded, so "holds this workspace" matches
several — but only one is the server this build talks to, and that label is what a
reader trusts when deciding which one to kill. The socket directory hash includes
the client's own version, so a server recorded under a different one is
definitionally not ours. The others now say they also have the workspace, which
explains their heap without claiming to be yours. The listing and the dashboard had
each worked this out separately, which is how they disagreed; they now share it.

Also silences the gauge widget's own percentage label, which was printing next to
ours and disagreeing about rounding: "11% 12%".

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>